Fix of hibernate exception and additional endpoint
- application.properties - logging and h2 properties
- hibernate.properties - fix of hibernate exception
- pom.xml - add bytebuddy to fix hibernate exception
- controller, service - add new endpoint